Fixed image spacing and margins for news stories listing.

--- a/future/site/UCF/themes/default/modules/news/css/common.css
+++ b/future/site/UCF/themes/default/modules/news/css/common.css
@@ -9,5 +9,5 @@
 .block .original{text-align: center; display: block;}
 
 .articles{margin-top: 20px;}
-.articles a.img{float:left; margin: 0 5px 0 0;}
-.articles a.img img{height: 97px; margin: 0; padding: 0; font-size: 16px;}
+.articles a.img{float:left; margin: 2px 10px 0 0;}
+.articles a.img img{height: 95px; margin: 0; padding: 0; font-size: 16px;}
